# todolist-soulparking

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: routes.py  server.py
app/todo/: todo_route.py
app/todo/entity/: todo_entity.py
app/todo/repository/: todo_repository.py
app/todo/usecase/: todo_usecase.py
core/: config.py
core/exceptions/: not_found_exception.py
core/helper/: datetime.py  responses.py
docker/: Dockerfile  docker-compose.yaml
tests/: helper_test.py  todo_test.py
